--- a/src/app/components/personalFactory/personal-create/personal-create.component.html
+++ b/src/app/components/personalFactory/personal-create/personal-create.component.html
@@ -88,8 +88,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="almacen" style="margin: 0;">Almacen</label>
-                    <select class="form-control" id="almacen" formControlName="almacen">
+                    <label for="almacenes" style="margin: 0;">Almacen</label>
+                    <select class="form-control" id="almacenes" formControlName="almacenes">
                         <option [value]="0" selected>Seleccione un grupo</option>
                         <option *ngFor="let almacen of almacenes" [value]="almacen.idAlmacen">{{almacen.nombre_almacen}}</option>
                     </select>
