--- a/src/app/components/personalFactory/personal-edit/personal-edit.component.html
+++ b/src/app/components/personalFactory/personal-edit/personal-edit.component.html
@@ -24,6 +24,7 @@
                         </small>
                     </small>
                 </div>
+
                 <div class="form-group ">
                     <label for="correo" style="margin: 0;">Correo</label>
                     <input type="text " class="form-control " id="correo" placeholder="Ingrese el correo del proveedor."
@@ -50,7 +51,8 @@
                 <div class="form-group">
                     <label for="almacen">Almacen</label>
                     <select class="form-control" formControlName="almacen">
-                        <option *ngFor="let almacen of almacenes" [value]="almacen.nombre_almacen">
+                    
+                        <option *ngFor="let almacen of almacenes" [value]="almacen.idAlmacen" [selected]="almacen.idAlmacen == idAlmacenActual">
                             {{almacen.nombre_almacen}}
                         </option>
                     </select>
@@ -59,6 +61,29 @@
                             Debe seleccionar una ciudad.
                         </small>
                     </small>
+                </div>
+
+                <button type="button" class="btn btn-primary" (click)="toggleCambiarContrasena()">
+                  <span>{{ cambiarContrasena ? 'Cancelar Cambiar Contraseña' : 'Cambiar Contraseña' }}</span>
+                </button>
+                <br>
+                <br>
+                
+
+                <div *ngIf="cambiarContrasena">
+                    <div class="form-group">
+                        <label for="password" style="margin: 0;">Nueva Contraseña</label>
+                        <input type="password" class="form-control" id="password" placeholder="Ingrese la nueva Contraseña."
+                            formControlName="password">
+                        <!-- Mensaje de error aquí -->
+                    </div>
+                
+                    <div class="form-group">
+                        <label for="confirmarPassword" style="margin: 0;">Confirmar Contraseña</label>
+                        <input type="password" class="form-control" id="confirmarPassword" placeholder="Confirmar la contraseña."
+                            formControlName="confirmarPassword">
+                        <!-- Mensaje de error aquí -->
+                    </div>
                 </div>
                 
                 <button type="submit" class="btn btn-primary">
