Login Fix And Table Personal Edit Fix

--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -41,7 +41,7 @@
                 <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
                 <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuadre de Caja</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { content: ['inventarios-productos'] } }]"
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos</font>
@@ -82,7 +82,7 @@
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proveedores</font>
             </a>
 
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['proveedores'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['personal'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Personal</font>
             </a>
