--- a/src/app/components/personalFactory/personal-edit/personal-edit.component.html
+++ b/src/app/components/personalFactory/personal-edit/personal-edit.component.html
@@ -63,15 +63,18 @@
                     </small>
                 </div>
 
-                <button type="button" class="btn btn-primary" (click)="toggleCambiarContrasena()">
-                  <span>{{ cambiarContrasena ? 'Cancelar Cambiar Contraseña' : 'Cambiar Contraseña' }}</span>
+                <button type="button" class="btn btn-warning boton_derecha" (click)="toggleCambiarContrasena()">
+                    <fa-icon [icon]="faUnlock" [size]="'sm'"></fa-icon>
+                  <span>{{ cambiarContrasena ? ' Cancelar' : ' Cambiar Contraseña' }}</span>
                 </button>
+              
                 
-                <br>
-                <br>
+          
                 
 
                 <div *ngIf="cambiarContrasena">
+                    <br>
+                    <br>
                     <div class="form-group">
                         <label for="password" style="margin: 0;">Nueva Contraseña</label>
                         <input type="password" class="form-control" id="password" placeholder="Ingrese la nueva Contraseña."
@@ -91,6 +94,8 @@
                     <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
                     Guardar
                 </button>
+              
+            
             </form>
         </div>
     </div>
