--- a/src/app/components/inventories/inventarios-pedido-lineas/inventarios-pedido-lineas.component.html
+++ b/src/app/components/inventories/inventarios-pedido-lineas/inventarios-pedido-lineas.component.html
@@ -13,7 +13,8 @@
             <div>
                 <mat-grid-list cols="7" rowHeight="60px" rowWidth="150px">
                     <mat-grid-tile>
-                        <a class="btn btn-info" href="./navegation-cl/(contentClient:inventarios-pedido)"
+                        <a class="btn btn-info"
+                            (click)="navegar()"
                             style="text-align:center;
                                     font-size: 15px; width:140px; 
                                        height:35px;
