--- a/src/app/components/inventories/inventarios-pedido-modelos/inventarios-pedido-modelos.component.html
+++ b/src/app/components/inventories/inventarios-pedido-modelos/inventarios-pedido-modelos.component.html
@@ -13,7 +13,8 @@
             <div>
                 <mat-grid-list cols="7" rowHeight="70px" rowWidth="150px">
                     <mat-grid-tile>
-                        <a class="btn button" href="./navegation-cl/(contentClient:inventarios-pedido)"
+                        <a class="btn button" 
+                            (click)="navegar()"
                             style="text-align:center;
                                     font-size: 15px; width:140px; 
                                        height:60px;
