--- a/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
+++ b/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
@@ -33,7 +33,8 @@
             <div>
                 <mat-grid-list cols="6" rowHeight="50px">
                     <mat-grid-tile>
-                        <a class="btn button" (click)="navegar()"
+                        <a class="btn button" 
+                        (click)="navegar()"
                             style="text-align:center;
                                     font-size: 15px; width:140px; 
                                        height:35px;
