--- a/src/app/components/sales/ventaprov/ventaprov.component.html
+++ b/src/app/components/sales/ventaprov/ventaprov.component.html
@@ -18,7 +18,9 @@
         </div>
         <div class="card-body ">
             <div class="row mx-3">
-                <a class="btn button" href="./navegation-cl/(contentClient:almacenegresos)" style="text-align:center;
+                <a class="btn button" 
+                    (click)="navegar()"
+                style="text-align:center;
                             font-size: 15px; width:140px; 
                                height:35px;
                                text-align:center; 
