--- a/src/app/components/inventories/inventarios/inventarios.component.html
+++ b/src/app/components/inventories/inventarios/inventarios.component.html
@@ -15,7 +15,8 @@
         </div><br>
         <mat-grid-list cols="6" rowHeight="50px">
             <mat-grid-tile>
-                <a class="btn button" href="./navegation-cl/(contentClient:inventarios-productos)"
+                <a class="btn button" 
+                    (click)="navegar()"
                     style="text-align:center;
                             font-size: 15px; width:140px; 
                                height:35px;
