--- a/src/app/components/navegation-facturador/navegation-facturador.component.html
+++ b/src/app/components/navegation-facturador/navegation-facturador.component.html
@@ -16,7 +16,7 @@
             </a>
        
  
-                <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['almacenegresos'] } }]"
+                <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['ventaprov'] } }]"
                     style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">payment</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas</font>
@@ -26,12 +26,12 @@
                 <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
                 <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuadre de Caja</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['inventarios-productos'] } }]"
+            <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['inventarios'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['inventarios-almacen'] } }]"
+            <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['inventarios-pedido'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventarios</font>
@@ -45,7 +45,7 @@
             <a mat-list-item href="#" class="disabled-link" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
-              </a>
+            </a>
 
             <a mat-list-item [routerLink]="[{ outlets: { contentPersonal: ['movimientos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">monitor</span>
