--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -68,7 +68,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <label for="cedula">Comprobante de venta:</label>
-                            <input type="text" [disabled]="disableProveedor" (keypress)="keyPressNumbers($event)"
+                            <input type="text" [disabled]="disableProveedor" (keypress)="keyPressNumbers2($event)"
                                 [(ngModel)]="comprobante" class="form-control input-1"
                                 placeholder="Comprobante de venta" (input)="onInputComprobante($event)">
                         </div>
