--- a/src/app/components/shooping/ver-compra/ver-compra.component.html
+++ b/src/app/components/shooping/ver-compra/ver-compra.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="invoice-info">
                     <div class="info-item">
-                        <h4>Comprobante de venta: {{ compVenta }}</h4>
+                        <h4>Comprobante de venta: {{ comprobanteFormato }}</h4>
                     </div>
                     <div class="info-item">
                         <h4>Fecha de emisión: {{ fechaEmision | slice:0:10 }}</h4>
