--- a/src/app/components/cash-balancing/cuadre-mov/cuadre-mov.component.html
+++ b/src/app/components/cash-balancing/cuadre-mov/cuadre-mov.component.html
@@ -10,15 +10,20 @@
             <br/><br/>
             <div class="label-container">
                 <label class="cool-label">{{metodoPago}}</label>
+                <button class="btn btn-success"  (click)="exportarAXLSX()">
+                    <fa-icon [icon]="faTable" style="color: white;"></fa-icon>
+                    <span style="color: white"> Exportar</span>
+                </button>
             </div>
             <div class="table-container">
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
-                        <th style="width: 20%; ">ID</th>
+                        <th style="width: 20%; ">NUMERO DE FACTURA</th>
                         <th style="width: 20%; ">FECHA</th>
                         <th style="width: 20%; " *ngIf="showValorAgregado">VALOR ABONADO</th>
                         <th style="width: 20%; ">TOTAL FACTURA</th>
+                        
                     </tr>
                 </thead>
                 <tbody style="color: #767695;">
