--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -33,8 +33,7 @@
                             </option>
                         </select>
                         <button class="btn btn-primary ml-2" (click)="realizarAccion()"
-                            [disabled]="identificacion !== '' || nombre !== '' || correo !== '' || ciudad !== '' || direccion !== '' || telefono !== '' && lstDetalleMovimientos.length > 0">ELEGIR</button>
-                        <button class="btn btn-primary ml-5" (click)="verDatos()">VER DATOS</button>
+                           >ELEGIR</button>
                     </div>
                     <small *ngIf="selectTipo">
                         <small *ngIf="selectTipo" style="color: red; ">
