--- a/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
+++ b/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
@@ -162,6 +162,17 @@
                 </small>
             </small>
         </div>
+        <div class="form-group ">
+            <label for="costo" style="margin: 0;">Costo</label>
+            <input type="text " class="form-control " id="costo"
+                placeholder="Ingrese el costo del Producto." formControlName="costo">
+            <small
+                *ngIf="modelProductForm.controls['costo'].invalid && (modelProductForm.controls['costo'].dirty || modelProductForm.controls['costo'].touched)">
+                <small *ngIf="modelProductForm.controls['costo'].errors?.['required']" style="color: red;">
+                    Debe ingresar el costo del Producto.
+                </small>
+            </small>
+        </div>
         <div class="form-group">
             <label for="tarifa" style="margin: 0;">Tarifa</label>
             <select class="form-control" formControlName="tarifa" (change)="changeGroup4($event)">
@@ -173,6 +184,20 @@
             <small *ngIf="selectTarifa">
                 <small *ngIf="selectTarifa" style="color: red; ">
                     Debe seleccionar una tarifa.
+                </small>
+            </small>
+        </div>
+        <div class="form-group">
+            <label for="tarifaICE" style="margin: 0;">Tarifa ICE</label>
+            <select class="form-control" formControlName="tarifaICE" (change)="changeGroup4($event)">
+                <option [value]=" 0 " selected>Seleccione una tarifa ICE</option>
+                <option *ngFor="let tarifa of lstTarifasICE" [value]="tarifa.descripcion">
+                    {{tarifa.descripcion}}
+                </option>
+            </select>
+            <small *ngIf="selectTarifa">
+                <small *ngIf="selectTarifa" style="color: red; ">
+                    Debe seleccionar una tarifa ICE.
                 </small>
             </small>
         </div>
