--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
                         border-radius: 10px;">
         <div align="center">
           <br>
-          <a routerLink="/navegation-cl" rel="noopener noreferrer">
+          <a rel="noopener noreferrer">
             <img src="https://atiendo.ec/black/img/logo.png">
           </a>
         </div>
