--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -126,8 +126,8 @@
                         <th style="width: 10%; ">ID Producto</th>
                         <th style="width: 10%; ">Producto</th>
                         <th style="width: 10%; ">Cantidad</th>
-                        <th style="width: 10%; ">Precio Uni.</th>
-                        <th style="width: 10%; ">Precio</th>
+                        <th style="width: 10%; ">Costo Uni.</th>
+                        <th style="width: 10%; ">Costo Total</th>
                         <th style="width: 10%; ">Tamaño</th>
                         <th style="width: 10%; ">Unidad de Medida</th>
                         <th style="width: 10%; ">Color</th>
