--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -11,6 +11,7 @@
           <div>Dirección Matriz: {{dir1}}</div>
           <div>Dirección Sucursal: {{direccionAlm}}</div>
           <div>Obligado a llevar Contabilidad: NO</div>
+          <div>Emite Retención: {{emiteRetencion}}</div>
         </div>
       </div>
       <div class="info-comercial">
