Add Obligado Llevar contabilidad solved (Create And Edit) Admin, Client, Personal

--- a/src/app/components/sales/factura/factura.component.html
+++ b/src/app/components/sales/factura/factura.component.html
@@ -10,7 +10,7 @@
           <div>Nombre Comercial: {{nombreComercial}}</div>
           <div>Dirección Matriz: {{dir1}}</div>
           <div>Dirección Sucursal: {{direccionAlm}}</div>
-          <div>Obligado a llevar Contabilidad: NO</div>
+          <div>Obligado a llevar Contabilidad: {{obligadoContabilidad}}</div>
           <div>Emite Retención: {{emiteRetencion}}</div>
         </div>
       </div>
