--- a/src/app/components/corporations/sociedades-edit/sociedades-edit.component.html
+++ b/src/app/components/corporations/sociedades-edit/sociedades-edit.component.html
@@ -146,7 +146,7 @@
 
                 <div class="form-group">
                     <label for="grupo">Obligatorio Contabilidad</label>
-                    <select class="form-control" (change)="changeGroup5($event)" formControlName="obligatorioContabilidad">
+                    <select class="form-control" (change)="changeGroup5($event)" formControlName="obligadoContabilidad">
                         <option [value]=" 0 " selected>Seleccione un valor obligatorio contabilidad</option>
                         <option [value]="si">
                             Si
@@ -155,8 +155,8 @@
                             No
                         </option>
                     </select>
-                    <small *ngIf="selectRol">
-                        <small *ngIf="selectRol" style="color: red; ">
+                    <small *ngIf="selectObligadoContabilidad">
+                        <small *ngIf="selectObligadoContabilidad" style="color: red; ">
                             Debe seleccionar un valor obligatorio contabilidad.
                         </small>
                     </small>
