--- a/src/app/components/corporations/sociedades-create/sociedades-create.component.html
+++ b/src/app/components/corporations/sociedades-create/sociedades-create.component.html
@@ -183,6 +183,25 @@
                         </small>
                     </small>
                 </div>
+
+
+                <div class="form-group">
+                    <label for="etiquetas">Logo Sociedad</label>
+                    <br />
+                    <!-- <input type="text" class="form-control" id="etiquetas" placeholder="Ingrese las etiquetas" formControlName="etiquetas"> -->
+                    <input type="file" accept="image/*" (change)="onChangeFile($event.target)"
+                        class="form-control" style="padding: 0px" formControlName="urlImagen" />
+                    <small *ngIf="
+                                    corporationForm.controls['urlImagen'].invalid &&
+                                    (corporationForm.controls['urlImagen'].dirty ||
+                                    corporationForm.controls['urlImagen'].touched)
+                    ">
+                        <small *ngIf="corporationForm.controls['urlImagen'].errors" style="color: red">
+                            Debe seleccionar imágen
+                        </small>
+                    </small>
+                </div>
+
                 <button type="submit" class="btn btn-primary">
                     <!--[disabled]="!this.corporationForm.valid"-->
                     <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
